fixed flexibility and overflow of sidenav text

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,7 @@
 .column-nowrap {
   flex-flow: column nowrap;
 }
+
+.auto {
+  overflow: auto;
+}
